compiler/test-data/parser/errors/backend/field_without_init.frel
module test

backend Counter {
    count : i32
}
